# partidos

./: .env.example  .gitignore  README.md  pyproject.toml
src/partidos/: __init__.py  cli.py  config.py  data.py  lineup.py  model.py  output.py
src/partidos.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
